# keycloak-agent-auth

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  README.md  TODO.md  docker-compose.yml  eclipse-formatter.xml  pom.xml
.github/: release-please-config.json
.github/workflows/: release.yml
docs/: architecture.md
docs/spec-audit/: README.md  admin-org.md  agent-host-lifecycle.md  approval-browser.md  discovery-catalog.md  execution-introspection.md  registration-lifecycle.md
examples/go/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  go.mod
examples/go/cmd/demo/: main.go
examples/go/cmd/rs/: main.go
examples/go/internal/admin/: admin.go
examples/go/internal/agent/: agent.go
examples/go/internal/client/: client.go
examples/go/internal/rs/: rs.go
examples/js/: Dockerfile  README.md  compose.yaml  package-lock.json  package.json  tsconfig.json
examples/js/src/: admin.ts  agent.ts  client.ts  demo.ts  resource-server.ts  rs-standalone.ts
examples/py/: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
examples/py/src/aap_demo/: admin.py  agent.py  client.py  demo.py  resource_server.py  rs_standalone.py
examples/rust/: Cargo.toml  Dockerfile  README.md  compose.yaml
examples/rust/src/: admin.rs  agent.rs  client.rs  lib.rs  rs.rs
scripts/: commit-msg.sh  install-hooks.sh
src/main/java/com/github/chh/keycloak/agentauth/: AgentAuthAdminResourceProvider.java  AgentAuthAdminResourceProviderFactory.java  AgentAuthDiscoveryCacheFilter.java  AgentAuthRealmResourceProvider.java  AgentAuthRealmResourceProviderFactory.java  AgentAuthUserEventListenerProviderFactory.java  AgentAuthWellKnownProvider.java  AgentAuthWellKnownProviderFactory.java  AgentJwtException.java  AgentJwtVerifier.java  ConstraintValidator.java  ConstraintViolation.java  HostJwtException.java  HostJwtVerifier.java  InMemoryRegistry.java  JwksCache.java  LifecycleClock.java  PendingAgentCleanup.java
src/test/java/com/github/chh/keycloak/agentauth/: AgentAuthAdminCapabilityRegistrationIT.java  AgentAuthAdminHostPreRegistrationIT.java  AgentAuthAdminTerminalStateGuardIT.java  AgentAuthAutonomousEntitlementGateIT.java  AgentAuthCapabilityCatalogIT.java  AgentAuthCapabilityExecuteIT.java  AgentAuthCapabilityRequestIT.java  AgentAuthCapabilityWithoutOrgsIT.java  AgentAuthCatalogNoPublicCapsIT.java  AgentAuthCibaApprovalIT.java  AgentAuthCibaEmailE2E.java  AgentAuthDeviceApprovalIT.java  AgentAuthDiscoveryIT.java  AgentAuthErrorResponseIT.java  AgentAuthFullJourneyE2E.java  AgentAuthGrantTableSyncIT.java  (+20 more)
src/test/resources/realms/: agent-auth-test-realm.json
(+23 files in other folders)
